:lipstick: Fix right-shifted sort button

--- a/src/components/board/board.module.css
+++ b/src/components/board/board.module.css
@@ -189,7 +189,7 @@
 
 .fixedWidth {
   width: 9.5rem;
-  text-align: center;
+  text-align: left;
 }
 
 .boardActions {
